--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -1,12 +1,12 @@
 {
     "metadata": {
-        "version": "3.9.0",
-        "last_updated": "2026-01-09",
+        "version": "1.2.0",
+        "last_updated": "2026-01-10",
         "region_focus": [
             "YE",
             "SA"
         ],
-        "description": "Merged configuration: Rich Vocabulary + Hierarchical Intelligence"
+        "description": "Enhanced configuration: Added Shopping, Education, New Banks (Saba/Inma), and Wallets (UrPay/Jawali)"
     },
     "settings": {
         "fuzzy_threshold": 0.8,
@@ -31,7 +31,8 @@
             ],
             "fractions": {
                 "نص": 0.5,
-                "ربع": 0.25
+                "ربع": 0.25,
+                "ثلث": 0.33
             }
         }
     },
@@ -44,11 +45,14 @@
             "عليك",
             "ممكن",
             "أبغا",
+            "ابغى",
             "أشتي",
             "بدي",
             "سويت",
             "قمت",
-            "بـ"
+            "بـ",
+            "تم",
+            "حق"
         ],
         "corrections_map": {
             "currency_typos": {
@@ -73,7 +77,9 @@
                 "استي سي": "STC",
                 "البيكك": "البيك",
                 "الكريمي بنك": "bank_kuraimi",
-                "ام فلوس": "wallet_kurimi_mfloos"
+                "ام فلوس": "wallet_kurimi_mfloos",
+                "يور باي": "wallet_urpay",
+                "سبافون": "telco_sabafon"
             },
             "action_typos": {
                 "حسابي": "حساب",
@@ -87,6 +93,8 @@
                 "استلاف": "قرض",
                 "دفع": "مصروف",
                 "سدد": "مصروف",
+                "حاسب": "مصروف",
+                "اشتريت": "مصروف",
                 "كاش": "نقدي"
             },
             "general_synonyms": {
@@ -94,6 +102,7 @@
                 "قروش": "نقود",
                 "زلط": "نقود",
                 "بيس": "نقود",
+                "مصاري": "نقود",
                 "نت": "انترنت",
                 "شبكه": "انترنت",
                 "الداتا": "بيانات",
@@ -201,7 +210,8 @@
                 "مطعم",
                 "غداء",
                 "عشاء",
-                "طعام"
+                "طعام",
+                "فطور"
             ],
             "subcategories": [
                 {
@@ -226,7 +236,8 @@
                         "طلبات",
                         "سناك",
                         "البيك",
-                        "شاورما"
+                        "شاورما",
+                        "بيتزا"
                     ]
                 },
                 {
@@ -235,7 +246,59 @@
                     "keywords": [
                         "قهوة",
                         "كوفي",
-                        "شاي"
+                        "شاي",
+                        "بارن",
+                        "ستاربكس"
+                    ]
+                }
+            ]
+        },
+        {
+            "id": "cat_shopping",
+            "name_ar": "تسوق وشخصي",
+            "type": "expense",
+            "icon": "shopping_bag",
+            "color": "#9C27B0",
+            "keywords": [
+                "شراء",
+                "تسوق",
+                "سوق",
+                "مول"
+            ],
+            "subcategories": [
+                {
+                    "id": "sub_clothing",
+                    "name_ar": "ملابس وأزياء",
+                    "keywords": [
+                        "ملابس",
+                        "ثوب",
+                        "بدلة",
+                        "فستان",
+                        "جزمة",
+                        "خياط"
+                    ]
+                },
+                {
+                    "id": "sub_electronics",
+                    "name_ar": "إلكترونيات",
+                    "keywords": [
+                        "جوال",
+                        "لابتوب",
+                        "شاحن",
+                        "سماعة",
+                        "ايفون",
+                        "سامسونج"
+                    ]
+                },
+                {
+                    "id": "sub_personal_care",
+                    "name_ar": "عناية شخصية",
+                    "keywords": [
+                        "حلاق",
+                        "صالون",
+                        "عطر",
+                        "مكياج",
+                        "نظافة"
                     ]
                 }
             ]
@@ -273,7 +336,8 @@
                         "مياه",
                         "كهرب",
                         "نت",
-                        "انترنت"
+                        "انترنت",
+                        "وايت"
                     ]
                 },
                 {
@@ -283,7 +347,8 @@
                         "سباكة",
                         "كهرباء بيت",
                         "لمبات",
-                        "اصلاح"
+                        "اصلاح",
+                        "ترميم"
                     ]
                 }
             ]
@@ -320,7 +385,8 @@
                         "أجرة",
                         "مشوار",
                         "اوبر",
-                        "كريم"
+                        "كريم",
+                        "مترو"
                     ]
                 },
                 {
@@ -331,7 +397,44 @@
                         "تبديل زيت",
                         "قطع غيار",
                         "ميكانيك",
-                        "بنشر"
+                        "بنشر",
+                        "تغيير زيت"
+                    ]
+                }
+            ]
+        },
+        {
+            "id": "cat_education",
+            "name_ar": "تعليم",
+            "type": "expense",
+            "icon": "school",
+            "color": "#FFC107",
+            "keywords": [
+                "دراسة",
+                "تعليم",
+                "مدرسة",
+                "جامعة"
+            ],
+            "subcategories": [
+                {
+                    "id": "sub_tuition",
+                    "name_ar": "رسوم دراسية",
+                    "keywords": [
+                        "قسط",
+                        "رسوم مدرسة",
+                        "رسوم جامعة",
+                        "تسجيل"
+                    ]
+                },
+                {
+                    "id": "sub_books",
+                    "name_ar": "كتب وقرطاسية",
+                    "keywords": [
+                        "كتب",
+                        "ملازم",
+                        "أقلام",
+                        "دفاتر",
+                        "مكتبة"
                     ]
                 }
             ]
@@ -344,7 +447,8 @@
             "color": "#00BCD4",
             "keywords": [
                 "جوال",
-                "موبايل"
+                "موبايل",
+                "هاتف"
             ],
             "subcategories": [
                 {
@@ -354,7 +458,8 @@
                         "رصيد",
                         "شحن",
                         "بطاقة سوا",
-                        "كارت"
+                        "كارت",
+                        "كرت"
                     ]
                 },
                 {
@@ -364,7 +469,8 @@
                         "باقة",
                         "داتا",
                         "اشتراك نت",
-                        "شريحة بيانات"
+                        "شريحة بيانات",
+                        "فور جي"
                     ]
                 }
             ]
@@ -382,7 +488,8 @@
                     "keywords": [
                         "صيدلية",
                         "دواء",
-                        "علاج"
+                        "علاج",
+                        "بندول"
                     ]
                 },
                 {
@@ -393,7 +500,8 @@
                         "دكتور",
                         "طبيب",
                         "عيادة",
-                        "تحاليل"
+                        "تحاليل",
+                        "اشعة"
                     ]
                 }
             ]
@@ -413,7 +521,8 @@
                         "رواتب",
                         "أجر",
                         "مرتب",
-                        "مكافأة"
+                        "مكافأة",
+                        "بدلات"
                     ]
                 },
                 {
@@ -422,7 +531,8 @@
                     "keywords": [
                         "استلام حوالة",
                         "وصلتني",
-                        "تحويللي"
+                        "تحويللي",
+                        "إيداع"
                     ]
                 },
                 {
@@ -431,7 +541,8 @@
                     "keywords": [
                         "ارباح",
                         "فائدة",
-                        "عائد"
+                        "عائد",
+                        "تجارة"
                     ]
                 }
             ]
@@ -451,7 +562,8 @@
                         "دين",
                         "سلفة",
                         "استلاف",
-                        "سداد دين"
+                        "سداد دين",
+                        "أقساط"
                     ]
                 },
                 {
@@ -461,7 +573,8 @@
                         "توفير",
                         "ادخار",
                         "تحويش",
-                        "حصالة"
+                        "حصالة",
+                        "جمعية"
                     ]
                 },
                 {
@@ -471,7 +584,9 @@
                         "رسوم",
                         "ضريبة",
                         "جمركة",
-                        "عمولة تحويل"
+                        "عمولة تحويل",
+                        "تجديد اقامة",
+                        "مخالفة"
                     ]
                 }
             ]
@@ -510,6 +625,17 @@
                 ]
             },
             {
+                "id": "bank_saba",
+                "name_ar": "بنك سبأ الإسلامي",
+                "country": "YE",
+                "priority": 8,
+                "keywords": [
+                    "بنك سبأ",
+                    "سبأ الاسلامي",
+                    "Saba Bank"
+                ]
+            },
+            {
                 "id": "bank_alrajhi",
                 "name_ar": "مصرف الراجحي",
                 "country": "SA",
@@ -543,6 +669,17 @@
                     "بنك الاهلي",
                     "SNB",
                     "NCB"
+                ]
+            },
+            {
+                "id": "bank_alinma",
+                "name_ar": "مصرف الإنماء",
+                "country": "SA",
+                "priority": 8,
+                "keywords": [
+                    "الانماء",
+                    "بنك الانماء",
+                    "Alinma"
                 ]
             },
             {
@@ -595,6 +732,17 @@
                 ]
             },
             {
+                "id": "wallet_jawali",
+                "name_ar": "محفظة جوالي",
+                "country": "YE",
+                "priority": 8,
+                "keywords": [
+                    "جوالي",
+                    "محفظة جوالي",
+                    "Jawali"
+                ]
+            },
+            {
                 "id": "wallet_onecash",
                 "name_ar": "ONE Cash",
                 "country": "YE",
@@ -616,6 +764,17 @@
                     "stc pay",
                     "المحفظة الرقمية",
                     "stc wallet"
+                ]
+            },
+            {
+                "id": "wallet_urpay",
+                "name_ar": "UrPay",
+                "country": "SA",
+                "priority": 9,
+                "keywords": [
+                    "يور باي",
+                    "UrPay",
+                    "يورباي"
                 ]
             },
             {
@@ -653,6 +812,29 @@
                 "يمنموبايل",
                 "يمن موبايل رصيد",
                 "ريال موبايل"
+            ]
+        },
+        {
+            "id": "telco_sabafon",
+            "name_ar": "سبأفون",
+            "category_id": "sub_recharge",
+            "country": "YE",
+            "keywords": [
+                "سبأفون",
+                "سبافون",
+                "Sabafon"
+            ]
+        },
+        {
+            "id": "telco_you",
+            "name_ar": "YOU",
+            "category_id": "sub_recharge",
+            "country": "YE",
+            "keywords": [
+                "يو",
+                "YOU Telecom",
+                "ام تي ان",
+                "MTN"
             ]
         },
         {
@@ -697,7 +879,8 @@
                 "انترنت",
                 "نت",
                 "واي فاي",
-                "يمن نت"
+                "يمن نت",
+                "عدن نت"
             ]
         },
         {
@@ -711,7 +894,9 @@
                 "كارفور",
                 "بنده",
                 "العثيم",
-                "الدكان"
+                "الدكان",
+                "اللولو",
+                "الدانوب"
             ]
         }
     ],
@@ -728,7 +913,9 @@
                 "قبضت",
                 "حولت",
                 "ارسل",
-                "حوالة"
+                "حوالة",
+                "شريت",
+                "حاسبت"
             ],
             "slots": [
                 "amount",
@@ -756,7 +943,8 @@
                 "سددت فاتورة",
                 "ادفع فاتورة",
                 "دفع فاتورة",
-                "عليا فاتورة"
+                "عليا فاتورة",
+                "تسديد"
             ],
             "slots": [
                 "biller_name",
@@ -764,9 +952,4 @@
             ]
         }
     }
-
 }
-
-
-
-
